--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Guitar Studier</a>
+    <a class="navbar-brand" routerLink="/home">Guitar Studier</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link"  >Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/home" >Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/jazz">Jazz</a>
+          <a class="nav-link" routerLink="/jazz" routerLinkActive="active">Jazz</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/triads">Triads</a>
+            <a class="nav-link" routerLink="/triads" routerLinkActive="active">Triads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/sight-reading">Sight Reading</a>
+            <a class="nav-link" routerLink="/sight-reading" routerLinkActive="active">Sight Reading</a>
           </li>
         <!--
         <li class="nav-item">
